feat:Added additional elements to index.html

--- a/index.html
+++ b/index.html
@@ -1,17 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="styles.css" />
-    <title>Palindrome Checker</title>
-  </head>
-  <body>
-    <div id="app-container">
-      <input id="text-input" type="text" placeholder="Enter a word or phrase" />
-      <button id="check-btn">CHECK PALINDROME</button>
-      <p id="result"></p>
-    </div>
-    <script src="script.js"></script>
-  </body>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="styles.css">
+  <title>Enhanced Palindrome Checker</title>
+</head>
+<body>
+  <div id="app-container">
+    <h1>Palindrome Checker</h1>
+    <input id="text-input" type="text" placeholder="Enter a word or phrase" />
+    <button id="check-btn">Check Palindrome</button>
+    <button id="clear-btn">Clear</button>
+    <p id="result"></p>
+    <ul id="history"></ul>
+    <p id="palindrome-count">Total Palindromes Found: 0</p>
+  </div>
+  <script src="script.js"></script>
+</body>
 </html>
